package usantatecla.mastermind;

public class MastermindGameLauncher {

  public static void main(String[] args) {
    new Mastermind().play();
  }
}
